# database-management-system

./: CMakeLists.txt  init.cpp  main.cpp  tests.cpp
includes/: ArgumentsForComparing.cpp  ArgumentsForComparing.h  Column.cpp  Column.h  Dump.cpp  Dump.h  Keyword.cpp  Keyword.h  KeywordDerivaties.cpp  KeywordDerivaties.h  Row.cpp  Row.h  Table.cpp  Table.h  Type.cpp  Type.h  TypeDerivaties.cpp  TypeDerivaties.h  aliases.h  compare.cpp  compare.h  queryProcessor.cpp  queryProcessor.h  stringUtilities.cpp  stringUtilities.h  tokenizer.cpp  tokenizer.h
